# SpotiFlopy

./: .cache  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .spotiflopy.db  .spotiflopy.db-shm  .spotiflopy.db-wal  .spotiflopy_cache.json  LICENSE  README.md  add_acoustid.sh  add_fingerprint.sh  add_init_musicbrainz.sh  add_metadata.sh  add_upgrade_system.sh  cleanup_music.py  config.ini.example  config.json.example  fix_init_quality.sh  fix_spotiflopy.sh  fix_spotify_auth.sh  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  spotiflopy
scripts/: block_files.py  rebuild_library.py
spotiflopy/: acoustid.py  acoustid_verify.py  cache.py  cli.py  config.py  db.py  download.py  downloader.py  fingerprint.py  init.py  library.py  main.py  matcher.py  metadata.py  musicbrainz.py  playlist.py  repair.py  spotify.py  state.py  tagger.py  upgrade.py  verification.py  youtube.py
